Include occurrence search query and filters for taxonomy
